<resources>
    <!--    <string name="default_web_client_id">56486367802-fnbm2rdvqq7uuj4g9503dtkj26mu61np.apps.googleusercontent.com</string>-->
    <string name="default_notification_channel_id" translatable="false">채팅</string>
    <string name="fcm_key" translatable="false">AAAADSbZkjo:APA91bEbm_UGjP1RUs0jM9ul6Hr0nQSuNyhrouhnMrYj3uwDjp4Q_CEO5bwfmWaWKaqx4YytXtQ6XnV4Sc6Fj8ULn2ifePzi2dEq3hE60EykeCJP5kfvZTbJmUEIetekEv23uzMTryF3</string>


    <string name="app_name_eng">Calenee</string>
    <string name="app_name_kor">캘린이</string>

    <string name="home">홈</string>
    <string name="calendar">캘린더</string>
    <string name="diary">다이어리</string>
    <string name="chat">채팅</string>
    <string name="memo">메모</string>
    <string name="menu">더보기</string>

    <string name="login_short_comment">&quot;연인과 함께 서로의 일상을 공유해보세요!&quot;</string>

    <!-- login -->
    <string name="google_login">구글 로그인</string>
    <string name="calenee_login">캘린이 로그인</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_check">새 비밀번호 확인</string>
    <string name="find_pw">비밀번호를 잊어버리셨나요?</string>
    <string name="input_name_email">기존에 가입했던 계정의 이름과 이메일을\n입력해주세요</string>
    <string name="sign_up_description">캘린이 계정이 없으신가요?</string>
    <string name="sign_up">가입하기</string>
    <string name="sign_up2">회원가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="confirm">확인</string>

    <!-- couple connection -->
    <string name="couple_connection">커플 연결</string>
    <string name="couple_connection_description">서로의 초대코드를 입력하여 연결해주세요</string>
    <string name="couple_connection_description2">상대방의 초대코드를 알고 계신가요?</string>
    <string name="my_invite_code">내 초대코드</string>
    <string name="partner_invite_code">상대방 초대코드 8자리</string>
    <string name="colon">:</string>
    <string name="copy">복사</string>
    <string name="connect">연결하기</string>
    <string name="refresh_invite_code">초대코드 재발급</string>

    <!-- profile -->
    <string name="enter_profile">프로필 작성</string>
    <string name="change_image">사진 변경</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="nickname">닉네임</string>
    <string name="birthday">생년월일 (8자리)</string>
    <string name="first_met_date">처음 만난 날짜 (8자리)</string>
    <string name="start">시작하기</string>
    <string name="profile_description1">상대방에게 보여질 프로필을 작성해주세요</string>
    <string name="profile_description2">기입하신 모든 정보들은 서비스 최적화를 위해서만 사용됩니다.</string>

    <!-- chat -->
    <string name="enter_msg">메세지를 입력해주세요</string>
    <string name="camera">카메라</string>
    <string name="album">앨범</string>
    <string name="file">파일</string>

    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="share">다른 앱으로 공유</string>
    <string name="details">상세정보</string>

    <!-- today message -->
    <string name="first">첫 번째</string>
    <string name="second">두 번째</string>
    <string name="third">세 번째</string>
    <string name="fourth">네 번째</string>
    <string name="fifth">다섯 번째</string>
    <string name="sixth">여섯 번째</string>

    <string name="alignment">정렬</string>
    <string name="text_size">글자 크기</string>
    <string name="text_size_small">작게</string>
    <string name="text_size_medium">보통</string>
    <string name="text_size_large">크게</string>
    <string name="sample_text">글자가 이 크기로 표시됩니다.123456789!@#%&amp;*()_+-=</string>
    <string name="text_color">글자 색</string>
    <string name="text_color_white">흰색</string>
    <string name="text_color_grey">회색</string>
    <string name="text_color_black">검은색</string>

    <dimen name="text_size">1sp</dimen>
    
    <string name="pick_image_from_album">앨범에서 사진 선택</string>
    <string name="set_black_background">검은 배경 적용</string>
    <string name="set_white_background">흰 배경 적용</string>
    <string name="set_white_text">흰 텍스트 적용</string>
    <string name="set_black_text">검은 텍스트 적용</string>

</resources>