<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/home" />

    <item
        android:id="@+id/diary"
        android:enabled="true"
        android:icon="@drawable/diary2"
        android:title="@string/diary" />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/menu" />
</menu>